Apply Gregor Horst's patch to stop polling while a scan is ongoing

BUG: 294073